#250 page shift fix

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -1,6 +1,9 @@
 @import "definitions"
 $alert-width: 500px
 
+html
+  overflow-y: scroll
+
 body
   background: $back url(../images/bg.png)
   margin: 0
